# find-chain

./: Cargo.toml  README.md  bench.sh
logs/: 1.txt  2.txt  9695.txt  9734.txt  9738.txt  bench-macbook.txt  bench-win.txt
src/: find_chain.rs  main.rs  run.rs
