[package]
name = "find-chain"
version = "0.1.0"
authors = ["nanlei.roy <nanlei.roy@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "*"
serde_derive = "*"
serde_json = "*"
threadpool = "1.8.1"
scoped_threadpool = "0.1.9"
futures = "0.3"
rayon = "1.5.0"