[package]
name = "find-chain"
version = "0.1.0"
authors = ["nanlei.roy <nanlei.roy@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rand = "0.8"

[profile.release]
lto = true
